# ActorMovieKG

./: .gitignore  README.md  pyproject.toml
mysql_cli/: mysql_client.py  mysql_model.py
simple/convertor/: handle.py  kg_client.py
simple/custom_model/: mysql_model.py  neo4j_model.py
